wp-content/themes/core/components/section_nav/css/section-nav.pcss
/* -----------------------------------------------------------------------------
 *
 * Component: Section Nav
 *
 * ----------------------------------------------------------------------------- */

.c-section-nav {
	border: 1px solid var(--color-border);

	@media (--viewport-small) {
		overflow: hidden;
		border: none;
	}
}

.c-section-nav__container-toggle {
	@mixin a-btn-reset;

	position: relative;
	display: block;
	width: 100%;
	padding: var(--spacer-20) var(--spacer-30);
	text-align: left;
	line-height: 1.5;
	letter-spacing: 0;

	@media (--viewport-small) {
		display: none;
	}

	&:after {
		@mixin icon;

		content: var(--icon-chevron-down);
		position: absolute;
		top: var(--spacer-20);
		right: var(--spacer-30);
		font-size: 24px;
		transition: var(--transition);
	}

	&:focus,
	&:hover {
		text-decoration: underline;
	}

	/* CASE: Mobile menu active */
	&[aria-expanded="true"] {

		&:after {
			transform: rotate(180deg);
		}
	}
}

.c-section-nav__container {
	display: none;

	@media (--viewport-small) {
		display: block;
	}
}

.c-section-nav__list {
	padding: 0 var(--spacer-30) var(--spacer-20);

	@media (--viewport-small) {
		display: flex;
		flex-flow: row nowrap;
		padding: 0;
	}
}

.section-nav__list-item {
	@media (--viewport-small) {
		display: flex;
		flex-flow: row nowrap;
	}

	& ~ li {
		margin-left: var(--spacer-30);

		@media (--viewport-small) {
			margin-left: var(--spacer-50);
		}
	}

	&:first-child {
		font-weight: 700;
	}
}

.section-nav__action {
	display: inline-block;
	padding: 6px 0;

	@media (--viewport-small) {
		padding: 0;
		white-space: nowrap;
	}

	&:focus,
	&:hover {
		outline: none;
		text-decoration: underline;
	}
}

.c-section-nav__more {
	display: none;
}

